# Pathology_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  wsi_core.py
outputs/20260224_101422_41cc14/traces/: trace.jsonl
outputs/20260224_103047_e17af9/traces/: trace.jsonl
outputs/20260224_103248_02c9fe/traces/: trace.jsonl
outputs/20260224_105121_c46c1e/traces/: trace.jsonl
outputs/20260224_105724_1d16ba/traces/: trace.jsonl
outputs/20260224_105925_c37dae/traces/: trace.jsonl
outputs/20260224_121513_399e74/traces/: trace.jsonl
outputs/20260224_121753_3202bb/traces/: trace.jsonl
outputs/20260224_133711_028a99/traces/: trace.jsonl
outputs/20260224_134836_01117c/traces/: trace.jsonl
outputs/20260224_135917_0580a5/traces/: trace.jsonl
outputs/20260224_140021_e55a17/traces/: trace.jsonl
outputs/20260224_140325_b149de/traces/: trace.jsonl
outputs/20260224_140543_ae8790/traces/: trace.jsonl
outputs/20260224_153844_916902/traces/: trace.jsonl
outputs/20260305_085434_8eb8e0/traces/: trace.jsonl
outputs/20260305_090133_0d78b9/traces/: trace.jsonl
outputs/20260305_091423_77a932/traces/: trace.jsonl
outputs/20260305_092057_bf8d26/traces/: trace.jsonl
outputs/20260305_093404_bf4a41/traces/: trace.jsonl
static/: app.js  index.html  styles.css
wsi_core_pkg/: __init__.py  agents.py  config.py  context_injection.py  dark_regions.py  prompts.py  reporting.py  runtime.py  slide_utils.py  state.py  tools.py
wsi_core_pkg/embeddings/: __init__.py  index_tiles_hnsw.py  roi_ranker.py  tiling.py
wsi_core_pkg/embeddings/extractors/: uni2.py  (+1 more)
(+59 files in other folders)
